--- a/index.html
+++ b/index.html
@@ -1,4 +1,115 @@
-<html>
-<head></head>
-<body>Hwhsandfjusa</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Pulse Labs - Immersive Solutions for Enterprise</title>
+
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+	  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery.scrollify.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@4.0.0/dist/simpleParallax.min.js"></script>
+
+ 
+	<script>
+		$(function() {
+		  $.scrollify({
+			section : ".container",
+			setHeights : false,
+    		scrollSpeed: 2000,
+		  });
+		});
+    </script>
+	  
+	<script>
+		var image = document.getElementsByClassName('darkgreen');
+		new simpleParallax(image);  
+	</script>
+  </head>
+  <body>
+	 
+	<div id="hero">
+		
+	<nav id="navbar" class="navbar navbar-expand-lg sticky border-bottom navscroll">
+		<a class="navbar-brand img-fluid" href="#"><img class="logo-header navscroll" src="images/Logo-Header_white.png" alt="Logo"/></a>
+	   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	   <span class="navbar-toggler-icon"></span>
+	   </button>
+		  <ul class="navbar-nav ml-auto">
+			 <li class="nav-item active">
+				<a class="nav-link" href="#">About</a>
+			 </li>
+			 <li class="nav-item">
+				<a class="nav-link" href="#">Solutions</a>
+			 </li>
+			 <li class="nav-item">
+				<a class="nav-link" href="#">News</a>
+			 </li>
+			 <li class="nav-item">
+				<a class="nav-link" href="#">Contact</a>
+			 </li>
+			 <li class="nav-item">
+				<a class="nav-link"></a>
+			 </li>
+			 <li class="nav-item">
+				<a class="nav-link"></a>
+			 </li>
+			 <li class="nav-item">
+				<a class="nav-link" href="tel:9134389095"><i class="material-icons mr-3">perm_phone_msg</i>913-438-9095</a>
+			 </li>
+		  </ul>
+	</nav>
+		
+	<header class="position-fixed vh-100">
+	  <div class="overlay"></div>
+	  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+		<source src="https://storage.googleapis.com/coverr-main/mp4/Mt_Baker.mp4" type="video/mp4">
+	  </video>
+		
+		  <div class="container h-100 display-1">
+			<div class="d-flex h-100 text-center align-items-center">
+			  <div class="w-100">
+				<h1 class="display-1 font-weight-bold text-pulse text-justify">Immersive Solutions</h1>
+				<p class="display-1 font-weight-bold text-white text-justify">For Enterprise</p>
+				<center>
+					<button type="button" class="btn btn-lg btn-black btn-green-hover mt-5">Learn More</button>
+				</center>
+			  </div>
+			</div>
+		  </div>
+		<div class="icon-scroll"></div>
+	</header>
+	  
+	<div class="container position-relative" style="margin-top:850px; max-width: 100%">
+		<div class="row">
+			<img class="darkgreen" src="images/darkgreen.png" alt="darkgreenshape" />
+			<img class="position-relative lightgreen" src="images/lightgreen.png" alt="lightkgreenshape" style="margin-top: -500px" />
+			<div class="col background-pulse">
+				<p class="w-75 m-auto text-justify">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+			</div>
+		</div>
+	</div>
+		
+	</div><!-- End Scene ID -->
+
+    <!-- Include all compiled plugins (below), or include individual files as needed-->
+    <script src="js/scripts.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+	  
+	  
+  </body>
 </html>
