--- a/index.html
+++ b/index.html
@@ -3,155 +3,82 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pulse Labs - Immersive Solutions for Enterprise</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Pulse Labs - Immersive Solutions for Enterprise</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
-    <link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/styles.css" rel="stylesheet">
+	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/aos.css" rel="stylesheet">
 
-    <script src="js/jquery-3.3.1.min.js"></script>
+	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/aos.js"></script>
-	<script src="js/simpleParallax.min.js"></script>
-	  
-    <!--script src="js/jquery.scrollify.js"></script>
-	<script>
-		$(function() {
-		  $.scrollify({
-			section : ".container",
-			setHeights : false,
-    		scrollSpeed: 2000,
-		  });
-		});
-    </script-->
-	  
-  </head>
-  <body class="background-pulse">
-	 
-	<div id="hero">
-		
-	<nav id="navbar" class="navbar navbar-expand-lg sticky border-bottom navscroll">
-		<a class="navbar-brand img-fluid" href="#"><img class="logo-header navscroll" src="images/Logo-Header_white.png" alt="Logo"/></a>
-	   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-	   <span class="navbar-toggler-icon"></span>
-	   </button>
-		  <ul class="navbar-nav ml-auto">
-			 <li class="nav-item active">
-				<a class="nav-link" href="#">About</a>
-			 </li>
-			 <li class="nav-item">
-				<a class="nav-link" href="#">Solutions</a>
-			 </li>
-			 <li class="nav-item">
-				<a class="nav-link" href="#">News</a>
-			 </li>
-			 <li class="nav-item">
-				<a class="nav-link" href="#">Contact</a>
-			 </li>
-			 <li class="nav-item">
-				<a class="nav-link"></a>
-			 </li>
-			 <li class="nav-item">
-				<a class="nav-link"></a>
-			 </li>
-			 <li class="nav-item">
-				<a class="nav-link" href="tel:9134389095"><i class="material-icons mr-3">perm_phone_msg</i>913-438-9095</a>
-			 </li>
-		  </ul>
-	</nav>
-		
-	<header class="position-fixed vh-100 navscroll">
-	  <div class="overlay"></div>
-	  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" class="vw-100">
-		<source src="videos/PortfolioShortReel_1080_30fps.mp4" type="video/mp4">
-	  </video>
-		
-		  <div class="container h-100 display-1">
-			<div class="d-flex h-100 text-center align-items-center">
-			  <div class="w-100">
-				<h1 class="display-1 font-weight-bold text-pulse text-justify">Immersive Solutions</h1>
-				<p class="display-1 font-weight-bold text-white text-justify">For Enterprise</p>
-				<center>
-					<a href="http://www.google.com"><button type="button" class="btn btn-lg btn-black btn-green-hover mt-5">Learn More</button></a>
-				</center>
-			  </div>
-			</div>
-		  </div>
-		<div class="icon-scroll"></div>
-	</header>
-	  
-	<div class="container position-relative" style="margin-top:850px; max-width: 100%">
-		<div class="row">
-			<img class="darkgreen thumbnail shadowed" src="images/darkgreen.png" alt="darkgreenshape" />
-			<img class="position-relative lightgreen shadowed" src="images/lightgreen.png" alt="lightkgreenshape" style="margin-top: -500px" />
-		</div>
-		
-		<div class="row background-pulse position-relative justify-content-center">
-			<div class="col-3">
-				<div class="w-25 m-auto clearfix" data-aos="zoom-in">
-					<div class="tk-circle shadowed2">
-						<img src="images/vivepro-hs.png" alt="vive pro headset" class="shadowed2" style="width: 125%; margin-left:-25px;"/>
-					</div>
-				</div>
-			</div>
-			<div class="col-6 vr-bg" data-aos="fade-left">
-				<p class="content-title">Virtual Reality</p>
-				<p class="content-sub-title">Virtual Reality is super cool and you should try it then you should call us</p>
-				<p class="content-text">The definition of virtual reality comes, naturally, from the definitions for both ‘virtual’ and ‘reality’. The definition of ‘virtual’ is near and reality is what we experience as human beings. So the term ‘virtual reality’ basically means ‘near-reality’. This could, of course, mean anything but it usually refers to a specific type of reality emulation.</p>
-				<p class="content-text">
-				We know the world through our senses and perception systems. In school we all learned that we have five senses: taste, touch, smell, sight and hearing. These are however only our most obvious sense organs. The truth is that humans have many more senses than this, such as a sense of balance for example. These other sensory inputs, plus some special processing of sensory information by our brains ensures that we have a rich flow of information from the environment to our minds.</p>
-			</div>
-		</div>
-		
-		<div class="row background-pulse">
-			<div class="col"></div>
-			<div class="col-3" data-aos="flip-up">
-				<button type="button" class="btn btn-lg btn-purple m-auto justify-content-center">Visit out WebVR Experience</button>
-			</div>
-			<div class="col-3"></div>
-		</div>
-		
-	</div>
-		
- 	<div class="container position-relative" style="margin-top: 100px; max-width: 100%">
-		<div class="row position-relative justify-content-center">
-			<div class="col-6 ar-bg" data-aos="fade-left">
-				<p class="content-title">Augmented Reality</p>
-				<p class="content-sub-title">Virtual Reality is super cool and you should try it then you should call us</p>
-				<p class="content-text">The definition of virtual reality comes, naturally, from the definitions for both ‘virtual’ and ‘reality’. The definition of ‘virtual’ is near and reality is what we experience as human beings. So the term ‘virtual reality’ basically means ‘near-reality’. This could, of course, mean anything but it usually refers to a specific type of reality emulation.<br><br>
-				We know the world through our senses and perception systems. In school we all learned that we have five senses: taste, touch, smell, sight and hearing. These are however only our most obvious sense organs. The truth is that humans have many more senses than this, such as a sense of balance for example. These other sensory inputs, plus some special processing of sensory information by our brains ensures that we have a rich flow of information from the environment to our minds.</p>
-			</div>
-			<div class="col-2">
-				<div class="w-25 m-auto clearfix" data-aos="zoom-in">
-					<div class="tk-circle shadowed2">
-						<img src="images/vivepro-hs.png" alt="vive pro headset" class="shadowed2" style="width: 125%; margin-left:-25px;"/>
-					</div>
-				</div>
-			</div>
-		</div>
-		
-		<div class="row background-pulse">
-			<div class="col"></div>
-			<div class="col-3" data-aos="fade-up">
-				<button type="button" class="btn btn-lg btn-purple m-auto justify-content-center">Visit out WebVR Experience</button>
-			</div>
-			<div class="col-3"></div>
-		</div>	
-	</div>
-		
-	</div><!-- End Scene ID -->
+	<!--script src="js/simpleParallax.min.js"></script-->
+	</head>
 
-    <!-- Include all compiled plugins (below), or include individual files as needed-->
-    <script src="js/scripts.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-	  
-	<script>
-	  AOS.init();
-	</script>
-	  
-	  
-  </body>
+	<body>
+		
+		
+		<div class="jumbotron jumbotron-fluid">
+			<div class="overlay"></div>
+			<video autoplay muted loop poster="">    
+				<source src="videos/PortfolioShortReel_1080_30fps.mp4" data-src="videos/PortfolioShortReel_1080_30fps.mp4" type="video/mp4">
+			</video>
+
+			<div class="container position-relative" style="z-index: 9;">
+				<div class="d-flex h-100 text-center align-items-center title-text">
+				  <div class="w-100">
+					<p class="display-1 font-weight-bold text-pulse text-left">Immersive Solutions</p>
+					<p class="display-1 font-weight-bold text-white text-left">For Enterprise</p>
+					<center>
+						<a href="#"><button type="button" class="btn-black mt-5">Learn More</button></a>
+					</center>
+				  </div>
+				</div>
+			</div>
+			
+		<div class="icon-scroll"></div>
+		</div>
+		
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom shadowed2 position-fixed w-100 navscroll">
+			<a class="navbar-brand" href="#"><img src="images/Logo-Header_white.png" alt="Pulse Labs Logo" /></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="#">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Solutions</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">News</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Portfolio</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact</a>
+					</li>
+					<li class="nav-item min-vw-20">
+						<a class="nav-link" href="tel:9134389095"><i class="material-icons mr-3">perm_phone_msg</i>913-438-9095</a>
+					</li>
+				</ul>
+			</div>		
+		</nav>
+		
+		
+		
+		<script src="js/scripts.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="js/bootstrap.bundle.min.js"></script>
+
+		<script>
+		  AOS.init();
+		</script>
+		
+	</body>
 </html>
