--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/aos.js"></script>
-	<!--script src="js/simpleParallax.min.js"></script-->
+	<script src="js/simpleParallax.min.js"></script>
 	</head>
 
 	<body>
@@ -23,7 +23,7 @@
 		<div class="jumbotron jumbotron-fluid">
 			<div class="overlay"></div>
 			<video autoplay muted loop poster="">    
-				<source src="videos/PortfolioShortReel_1080_30fps.mp4" data-src="videos/PortfolioShortReel_1080_30fps.mp4" type="video/mp4">
+				<source src="https://s3.us-east-2.amazonaws.com/aws-codestar-us-east-2-774818991484/PulseHeroVid.mp4" data-src="https://s3.us-east-2.amazonaws.com/aws-codestar-us-east-2-774818991484/PulseHeroVid.mp4" type="video/mp4">
 			</video>
 
 			<div class="container position-relative" style="z-index: 9;">
@@ -41,8 +41,8 @@
 		<div class="icon-scroll"></div>
 		</div>
 		
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark border-bottom shadowed2 position-fixed w-100 navscroll">
-			<a class="navbar-brand" href="#"><img src="images/Logo-Header_white.png" alt="Pulse Labs Logo" /></a>
+		<nav class="navbar navbar-expand-lg navbar-dark border-bottom shadowed2 position-fixed w-100 navscroll">
+			<a class="navbar-brand" href="#"><img class="navscroll" src="images/Logo-Header_white.png" alt="Pulse Labs Logo" /></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle Navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -69,6 +69,13 @@
 				</ul>
 			</div>		
 		</nav>
+	  
+		<div class="container position-relative mw-100">
+			<div class="row mw-100 greenshapes">
+				<img class="darkgreen thumbnail shadowed" src="images/darkgreen.png" alt="darkgreenshape" />
+				<img class="position-relative lightgreen shadowed" src="images/lightgreen.png" alt="lightkgreenshape" style="margin-top: -500px" />
+			</div>
+		</div>
 		
 		
 		
