--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		
 		<div class="jumbotron jumbotron-fluid">
 			<div class="overlay"></div>
-			<video autoplay muted loop poster="">    
+			<video playinline autoplay muted loop poster="">    
 				<source src="https://s3.us-east-2.amazonaws.com/aws-codestar-us-east-2-774818991484/PulseHeroVid.mp4" data-src="https://s3.us-east-2.amazonaws.com/aws-codestar-us-east-2-774818991484/PulseHeroVid.mp4" type="video/mp4">
 			</video>
 
